<resources>
    <string name="app_name">MVVM Kotlin</string>
    <string name="my_logo">Logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="user_name">User Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account_create_one">Don\'t have an account? Create One</string>
    <string name="already_have_an_account_login_here">Already have an account? Login Here</string>
    <string name="lorem">Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.</string>
    <string name="lorem_twenty">Lorem Twenty</string>
</resources>
