<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewmodel"
            type="com.adwera.mvvmkotlin.ui.auth.AuthViewModel" />
    </data>
    <androidx.core.widget.NestedScrollView
        android:id="@+id/root_layout_sign_up"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".ui.auth.SignUpActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/sign_up_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:indeterminate="true"
                android:indeterminateTint="#000000"
                android:indeterminateTintMode="src_atop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_up_user_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:text="@={viewmodel.name}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="132dp"
                android:layout_marginEnd="32dp"
                android:drawableStart="@drawable/ic_mood"
                android:hint="@string/user_name"
                android:inputType="textEmailAddress"
                android:textColorHint="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_up_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:text="@={viewmodel.email}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="52dp"
                android:textColorHint="#000000"
                android:drawableStart="@drawable/ic_email"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="@+id/sign_up_user_name"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/sign_up_user_name"
                app:layout_constraintTop_toBottomOf="@+id/sign_up_user_name" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_up_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:text="@={viewmodel.password}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="52dp"
                android:drawableStart="@drawable/ic_lock"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="#000000"
                app:layout_constraintEnd_toEndOf="@+id/sign_up_email"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/sign_up_email"
                app:layout_constraintTop_toBottomOf="@+id/sign_up_email" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_up_confirm_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:text="@={viewmodel.passwordConfirm}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="52dp"
                android:drawableStart="@drawable/ic_lock"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textColorHint="#000000"
                app:layout_constraintEnd_toEndOf="@+id/sign_up_password"
                app:layout_constraintStart_toStartOf="@+id/sign_up_password"
                app:layout_constraintTop_toBottomOf="@+id/sign_up_password" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="52dp"
                android:backgroundTint="#000000"
                android:elevation="10dp"
                android:onClick="@{viewmodel::onSignUpClicked}"
                android:text="@string/sign_up"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="@+id/sign_up_confirm_password"
                app:layout_constraintStart_toStartOf="@+id/sign_up_confirm_password"
                app:layout_constraintTop_toBottomOf="@+id/sign_up_confirm_password" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{viewmodel::onLogin}"
                android:layout_marginStart="87dp"
                android:layout_marginTop="62dp"
                android:layout_marginEnd="88dp"
                android:text="@string/already_have_an_account_login_here"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>
