<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="viewmodel"
            type="com.adwera.mvvmkotlin.ui.auth.AuthViewModel" />
    </data>
    <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".ui.auth.LoginActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_marginTop="100dp"
                android:src="@drawable/img"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.551"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputEditText
                android:text="@={viewmodel.email}"
                android:id="@+id/edit_text_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginStart="32dp"
                android:textColorHint="#000000"
                android:layout_marginEnd="32dp"
                android:drawableStart="@drawable/ic_email"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <com.google.android.material.textfield.TextInputEditText
                android:text="@={viewmodel.password}"
                android:id="@+id/edit_text_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="52dp"
                android:textColorHint="#000000"
                android:drawableStart="@drawable/ic_lock"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="@+id/edit_text_email"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/edit_text_email"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_email" />

            <Button
                android:onClick="@{viewmodel::onLoginClicked}"
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="52dp"
                android:backgroundTint="#000000"
                android:text="@string/log_in"
                android:textColor="#FFFFFF"
                android:elevation="10dp"
                app:layout_constraintEnd_toEndOf="@+id/edit_text_password"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/edit_text_password"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_password" />

            <ProgressBar
                android:id="@+id/progress_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:indeterminateTintMode="src_atop"
                android:indeterminateTint="#000000"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintEnd_toStartOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/to_sign_up_page"
                style="@style/TextAppearance.Compat.Notification.Info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/don_t_have_an_account_create_one"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/button_login"
                app:layout_constraintStart_toStartOf="@+id/button_login"
                app:layout_constraintTop_toBottomOf="@+id/button_login" />


        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.core.widget.NestedScrollView>

</layout>